# codex-webui

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.en.md  README.md  docker-compose.yml  drizzle.config.ts  example_provider.md  install.sh  pack.sh  package.json  pnpm-lock.yaml  start-wsl.sh  start.ps1  tsconfig.json
.github/workflows/: docker-publish.yml
.playwright-mcp/: page-2026-07-18T12-07-07-345Z.yml  page-2026-07-18T12-08-29-148Z.yml  page-2026-07-18T12-09-30-277Z.yml  page-2026-07-18T12-12-19-722Z.yml  page-2026-07-18T12-12-45-648Z.yml  page-2026-07-18T12-13-05-816Z.yml  page-2026-07-18T12-14-25-875Z.yml  page-2026-07-18T12-15-55-526Z.yml  page-2026-07-18T12-17-04-593Z.yml  page-2026-07-18T12-17-53-901Z.yml  page-2026-07-18T12-18-08-236Z.yml  page-2026-07-18T12-18-19-561Z.yml  page-2026-07-18T12-18-38-027Z.yml  page-2026-07-18T12-20-17-575Z.yml
backend-rs/: .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  STUDY.md  build.rs  config.toml.example
backend-rs/drizzle/: 0000_init.sql  0002_certain_starbolt.sql
backend-rs/logs/: app.2026-07-06  app.2026-07-07  codex-jsonrpc.jsonl
backend-rs/sql/: README.md
backend-rs/sql/mysql/: init.sql
backend-rs/sql/pg/: init.sql
backend-rs/src/: chat.rs  codex_status.rs  codex_status_config.rs  config.rs  error.rs  event_subscribers.rs  files.rs  lib.rs  logging.rs  logs.rs  main.rs  onlyoffice.rs  proxies.rs  realtime.rs  sqlite_handlers.rs  state.rs  stubs.rs  terminal.rs  threads.rs
backend-rs/src/api/: chat.rs  event_subscribers.rs  files.rs  health.rs  hooks.rs  logs.rs  mod.rs  onlyoffice.rs  policy.rs  proxies.rs  realtime.rs  settings.rs  sqlite.rs  terminal.rs  threads.rs
backend-rs/src/api/multitenant/: extensions.rs  handlers.rs  internal_rpc.rs  mod.rs  routing.rs
backend-rs/src/auth/: middleware.rs  mod.rs
backend-rs/src/codex/: jsonrpc.rs  mod.rs  process.rs  types.rs
backend-rs/src/db/: entity.rs  migrations.rs  mod.rs
backend-rs/src/db/entities/: mod.rs  tool_policy.rs
backend-rs/src/db/migration/: m20260716_0003_audit.rs  m20260716_0005_business_team_id.rs  m20260716_0006_quota.rs  m20260716_0007_team_routes.rs  m20260716_0008_session_replicas.rs  m20260718_000001_workspace_audit.rs  m20260718_000002_user_api_keys.rs  m20260718_000003_thread_resume_cache.rs  m20260718_000004_thread_workspace_type.rs  m20260718_000005_threads_team_id_no_fk.rs  m20260719_000001_combined_schema.rs  m20260720_000001_rbac_permissions.rs  m20260721_000001_session_replicas_per_thread.rs  m20260722_000001_cluster_extensions.rs  m20260722_000002_cluster_extensions_unique.rs  m20260722_000003_cluster_extensions_marketplace.rs  m20260722_000004_cluster_extensions_holder_pk.rs  mod.rs
backend-rs/src/migration/: m20260716_0001_initial.rs  m20260716_0002_api_keys.rs  m20260716_0004_business.rs  mod.rs
backend-rs/src/multitenant/: api_keys.rs  audit.rs  auth.rs  codex_pool.rs  entity.rs  event_bus.rs  handlers.rs  middleware.rs  migration.rs  mod.rs  models.rs  rate_limit.rs  routing.rs  teams.rs
backend-rs/src/routes/: auth.rs  health.rs  mod.rs
backend-rs/src/services/: codex_status.rs  codex_status_config.rs  files.rs  mod.rs  terminal.rs  threads.rs
backend-rs/src/services/extensions/: apply.rs  config_merge.rs  fingerprint.rs  mod.rs  store.rs  sync.rs
backend-rs/src/services/multitenant/: api_keys.rs  audit.rs  auth.rs  cluster.rs  codex_pool.rs  event_bus.rs  event_persist.rs  mod.rs  permissions.rs  pool_policy.rs  quota.rs  rebalance.rs  replication.rs  resume_cache.rs  rpc.rs  snapshot.rs  sticky.rs  teams.rs
backend-rs/src/services/policy_engine/: dto.rs  engine.rs  mod.rs  store.rs
backend-rs/src/services/settings/: mod.rs  reconcile.rs
backend-rs/src/services/workspace/: audit_writer.rs  decision.rs  file_sync.rs  hooks_config.rs  mod.rs
backend-rs/src/settings/: definitions.rs  handlers.rs  mod.rs  reconcile.rs
backend-rs/tests/: auth_test.rs  error_test.rs  hooks_webhook.rs  migration_test.rs  multitenant_auth_test.rs  routes_test.rs  settings_crud_test.rs  settings_test.rs
docs/: cluster-deploy.md  cluster-test-setup.md  thread-resume-cache-troubleshooting.md
drizzle/: 0001_fresh_daredevil.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
src/: app.controller.spec.ts  app.controller.ts  app.dto.ts  app.module.ts  app.service.ts  main.ts
src/account/: account.controller.ts  account.module.ts  account.service.spec.ts  account.service.ts
src/apps/: apps.controller.ts  apps.module.ts  apps.service.ts
src/archive/: archive.controller.ts  archive.service.ts
src/auth/: api-key.guard.spec.ts  api-key.guard.ts  auth.controller.ts  auth.module.ts  auth.service.ts  public.decorator.ts
src/chat/: chat-upload.service.spec.ts  chat-upload.service.ts  chat.controller.ts  chat.module.ts
src/codex/: codex-config.controller.ts  codex-jsonrpc-client.ts  codex-status.controller.ts  codex-status.service.spec.ts  codex-status.service.ts  codex.module.ts
src/common/: all-exceptions.filter.ts  business.exception.ts  error-codes.ts  json-safe.ts
src/database/: database.constants.ts  database.module.ts  database.service.ts  schema.ts
src/files/: files.controller.ts  files.gateway.ts  files.module.ts  files.service.spec.ts  files.service.ts
src/logs/: logs.controller.ts  logs.module.ts  logs.service.ts
src/mcp-servers/: mcp-servers.controller.ts  mcp-servers.module.ts  mcp-servers.service.spec.ts  mcp-servers.service.ts
src/models/: models.controller.ts
src/onlyoffice/: onlyoffice.controller.ts
src/pending-approvals/: pending-approvals.controller.ts  pending-approvals.service.ts
test/: app.e2e-spec.ts
test-home/: goals_1.sqlite  goals_1.sqlite-shm  goals_1.sqlite-wal  installation_id  logs_2.sqlite  logs_2.sqlite-shm  logs_2.sqlite-wal  memories_1.sqlite  memories_1.sqlite-shm  memories_1.sqlite-wal  state_5.sqlite  state_5.sqlite-shm  state_5.sqlite-wal
web/: eslint.config.js  openapi-ts.config.ts  openapi.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  (+7 more)
(+205 files in other folders)
