[package]
name = "codex-webui"
version = "0.1.0"
edition = "2024"

[features]
# 启用 memberlist gossip 探活实现 + 必需 features(禁 default 省编译时间)。
memberlist-backend = ["memberlist/tokio", "memberlist/tcp"]

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.7", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.28"
jsonwebtoken = "9"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
chrono = "0.4"
# 配置文件解析(TOML v1.1.3 + spec 1.1.0)
toml = "1.1"
# 保留注释+格式的 TOML 精确编辑(用于改 $CODEX_HOME/config.toml 的 hooks 段而不动用户其他配置)
toml_edit = "0.22"
futures-util = "0.3"
once_cell = "1"
portable-pty = "0.8"
wezterm-term = { git = "https://github.com/wez/wezterm", rev = "fff02ca501c3b457f99b467a86061d2b150c51f2" }
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "charset", "http2", "system-proxy"],default-features = false}
socketioxide = { version = "0.16", features = ["state"] }
tar = "0.4"
flate2 = "1"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "cache"] }
url = "2"
uuid = { version = "1", features = ["v4", "v7"] }
# 多租户平台(M1):sqlx 数据层(async + 多方言 pg/mysql,与现有 rusqlite 共存) + 密码哈希 + 邀请码随机
# 注:SeaORM 1.0 与 rusqlite 的 libsqlite3-sys links 冲突(SeaORM issue #2725),无法共存,故用 sqlx
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "mysql"] }
# SeaORM 全量数据层(PG/MySQL 多方言)。rusqlite 已删,无 libsqlite3-sys 冲突;sqlx 统一 0.8(sea-orm 1.1 依赖)。
# sea-orm 不开 sqlx-sqlite 后端,不牵 libsqlite3-sys。multitenant + 业务代码全部迁 sea-orm。
sea-orm = { version = "1.1", default-features = false, features = ["sqlx-postgres", "sqlx-mysql", "runtime-tokio-rustls", "macros", "with-json"] }
sea-orm-migration = { version = "1.1", default-features = false, features = ["sqlx-postgres", "sqlx-mysql", "runtime-tokio-rustls"] }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
# M4 分布式协调:Redis(事件总线 Pub/Sub、路由表、粘性、限流计数)
redis = { version = "0.27", default-features = false, features = ["tokio-comp"] }
# M5-B 指标:metrics + Prometheus exporter
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false }
zip = "2"
sevenz-rust2 = "0.21"
bzip2-rs = "0.1"
lzma-rust2 = "0.16"
rust-embed = "8"
mime_guess = "2"
memberlist = { version = "0.8.5", default-features = false }
nodecraft = { version = "0.9", default-features = false, features = ["default"] }
# 集群扩展分发:递归目录扫描
walkdir = "2"
[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
# 测试临时目录
tempfile = "3"
